--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         input, select { width: 100%; padding: 12px; border: 2px solid #e5e7eb; border-radius: 10px; font-size: 16px; transition: border-color 0.3s; }
         input:focus, select:focus { outline: none; border-color: #f59e0b; }
         .interests-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
-        .interest-btn { padding: 10px; border: 2px solid #e5e7eb; border-radius: 10px; background: white; cursor: pointer;0.3s transition: all ; text-align: center; font-size: 14px; }
+        .interest-btn { padding: 10px; border: 2px solid #e5e7eb; border-radius: 10px; background: white; cursor: pointer; transition: all 0.3s; text-align: center; font-size: 14px; }
         .interest-btn:hover { border-color: #f59e0b; }
         .interest-btn.selected { background: #fef3c7; border-color: #f59e0b; }
         .photo-upload { border: 2px dashed #d1d5db; border-radius: 10px; padding: 30px; text-align: center; cursor: pointer; transition: all 0.3s; }
