Add Stripe payment link

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <p class="price-display">$12</p>
                 <p style="color: #78350f; margin: 10px 0;">Personalized digital storybook</p>
                 
-                <!-- REPLACE WITH YOUR CASH APP TAG -->
-                <a href="https://cash.app/$AprilJetson/12" target="_blank" class="payment-btn">
-                    💚 Pay with Cash App
+                <!-- REPLACE WITH YOUR STRIPE PAYMENT LINK -->
+                <a href="https://buy.stripe.com/test_3cI00j1Da7sq3GF2vkdAk00" target="_blank" class="payment-btn">
+                    💳 Pay with Card / Apple Pay / Google Pay
                 </a>
                 
                 <p style="font-size: 12px; color: #78350f; margin-top: 15px;">
